--- a/styles/base.css
+++ b/styles/base.css
@@ -507,6 +507,7 @@ footer {
     line-height: 1.4em;
     padding: 0px;
     margin: 8px 16px;
+	text-align:center;
   }
   header h1 {
     font-size: 2.4em;
