--- a/styles/base.css
+++ b/styles/base.css
@@ -540,11 +540,10 @@ footer {
     width: 100%;
   }
   .tile img {
-    height: 76px;
-    width: 76px;
+    width: 23%;
 	border-radius:0px;
 	border:0px;
-	margin:2px;
+	margin:1%;
 	padding:0px;
   }
   #social img{
