--- a/styles/base.css
+++ b/styles/base.css
@@ -329,7 +329,7 @@ a:focus {
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 0%;
+ /* height: 0%;*/
   opacity: 0;
   z-index: 1000;
   background: rgba(0, 0, 0, 0);
