--- a/styles/base.css
+++ b/styles/base.css
@@ -41,6 +41,9 @@ header h1 {
   text-align: center;
   color: #dee1b6;
 }
+
+.hidden{ display:none; }
+
 #sketchbook-wrapper h1 {
   color: #dee1b6;s
 }
@@ -318,7 +321,7 @@ a:focus {
   }
   100% {
     opacity: 0;
-    height: 100%;
+    height: 0%;
     transform: scale(0);
   }
 }
@@ -337,6 +340,7 @@ a:focus {
 .showDarkbox {
   display: block;
   height: 100%;
+	top:0;
   -webkit-animation: slide-in 0.9s ease-in-out;
   /* Safari 4+ */
   -moz-animation: slide-in 0.9s ease-in-out;
@@ -348,6 +352,7 @@ a:focus {
   opacity: 1;
 }
 .hideDarkbox {
+
   -webkit-animation: slide-out 0.8s ease-in;
   /* Safari 4+ */
   -moz-animation: slide-out 0.8s ease-in;
@@ -357,7 +362,7 @@ a:focus {
   animation: slide-out 0.8s ease-in;
   /* IE 10+ */
   opacity: 0;
-  height: 0%;
+  height: 0%;	
 }
 .closeBox {
   background: #73c8a9 url("../images/button-close.svg") center center no-repeat;
