--- a/styles/base.css
+++ b/styles/base.css
@@ -348,7 +348,7 @@ a:focus {
  /* height: 0%;*/
   opacity: 0;
   z-index: 1000;
-  background: rgba(0, 0, 0, 0);
+  background: #000000;
 }
 .showDarkbox {
   display: block;
@@ -378,40 +378,49 @@ a:focus {
   height: 0%;	
 }
 .closeBox {
-  background: #f8fbd4 url("../images/button-close.svg") center center no-repeat;
+  background: url("../images/button-close.svg") center center no-repeat;
   background-size: 16px;
-  height: 48px;
-  width: 48px;
+  height: 32px;
+  width: 32px;
   border-radius: 100%;
-  margin: -56px auto;
   z-index: 5000;
+  position:absolute;
+  top:24px;
+  right:128px;
+  transition: all 0.2s ease-in-out;
 }
 .closeBox:hover {
-  background: #82ceb2 url("../images/button-close.svg") center center no-repeat;
+  background: url("../images/button-close.svg") center center no-repeat;
+  background-size: 24px;
+  cursor:pointer;
 }
-.container-wrapper {
+.container-wrapper, .navigation-wrapper {
+  position:absolute;
   width: 100%;
   height: 100%;
   display: table;
   margin: 0px auto;
-  background: #000000;
   border: 0px solid #fff;
   border-radius: 0px;
 }
+
+
 .previous {
   height: 100%;
-  width: 80px;
+  width: 50%;
   background: url("../images/button-back.svg") center center no-repeat;
-  background-size: 24px;
+  background-size: 32px;
   display: table-cell;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .previous:hover {
-  background: rgba(255, 255, 255, 0.1) url("../images/button-back.svg") center center no-repeat;
+  background: url("../images/button-back.svg") center center no-repeat;
+  background-size:48px;
+  cursor:pointer;
 }
 .container {
   height: 100%;
-  width: auto;
+  width: 100%;
   display: table-cell;
   vertical-align: middle;
 }
@@ -423,14 +432,16 @@ a:focus {
 }
 .next {
   height: 100%;
-  width: 80px;
+  width: 50%;
   display: table-cell;
   background: url("../images/button-forward.svg") center center no-repeat;
-  background-size: 24px;
-  transition: all 0.5s ease-in-out;
+  background-size: 32px;
+  transition: all 0.2s ease-in-out;
 }
 .next:hover {
-  background: rgba(255, 255, 255, 0.1) url("../images/button-forward.svg") center center no-repeat;
+  background: url("../images/button-forward.svg") center center no-repeat;
+  background-size: 48px;
+  cursor:pointer;
 }
 /* Footer ************************************************************************** */
 footer {
