--- a/styles/base.css
+++ b/styles/base.css
@@ -129,7 +129,7 @@ a:focus {
   bottom: 0px;
   left: 0px;
   width: 100%;
-  height: 100%;
+  height: 1000px;
   z-index: -1;
 }
 
@@ -549,6 +549,16 @@ footer {
     -webkit-column-count: 1;
     -moz-column-count: 1;
   }
+
+.bg-image {
+    position:fixed;	
+    width:100%;
+    height:100%;
+    background-position: center top;
+    background-size: contain; 
+    opacity:0;
+    transition: opacity 2.5s ease-in;
+}
 
 	img.intro-image, img.vita-image { 
 	float:none;
