--- a/styles/base.css
+++ b/styles/base.css
@@ -553,9 +553,10 @@ footer {
 .bg-image {
     position:fixed;	
     width:100%;
-    height:100%;
+    height:auto;
     background-position: center top;
-    background-size: contain; 
+    background-size: contain;
+    -webkit-background-size:contain; 
     opacity:0;
     transition: opacity 2.5s ease-in;
 }
