--- a/styles/base.css
+++ b/styles/base.css
@@ -553,10 +553,12 @@ footer {
 .bg-image {
     position:fixed;	
     width:100%;
-    height:auto;
+    height:100%;
     background-position: center top;
-    background-size: contain;
-    -webkit-background-size:contain; 
+    background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
     opacity:0;
     transition: opacity 2.5s ease-in;
 }
