--- a/styles/base.css
+++ b/styles/base.css
@@ -138,7 +138,9 @@ a:focus {
  width:100%;
  height:100%;
  background-position: center center;
+-webkit-background-position:center center;
  background-size: cover;
+-webkit-background-size:100% auto;
  opacity:0;
  transition: opacity 2.5s ease-in;
 }
