--- a/styles/base.css
+++ b/styles/base.css
@@ -140,7 +140,7 @@ a:focus {
  background-position: center center;
 -webkit-background-position:center center;
  background-size: cover;
--webkit-background-size:100% auto;
+-webkit-background-size:cover;
  opacity:0;
  transition: opacity 2.5s ease-in;
 }
