--- a/styles/base.css
+++ b/styles/base.css
@@ -136,9 +136,10 @@ a:focus {
 .bg-image {
  position:fixed;	
  width:100%;
- height:100%;
- background-position: center center;
+ height:auto;
+/* background-position: center center;
 -webkit-background-position:center center;
+*/
  background-size: cover;
 -webkit-background-size:100% auto;
  opacity:0;
@@ -539,7 +540,7 @@ footer {
     font-size: 2.4em;
     font-weight: 300;
     padding: 0px;
-    margin: 10px 0px 10px 0px;
+    margin: 50px 0px 50px 0px;
   }
   p {
     font-size: 1.2em;
