sure, kill me css

--- a/styles/base.css
+++ b/styles/base.css
@@ -136,7 +136,7 @@ a:focus {
 .bg-image {
  position:fixed;	
  width:100%;
- height:500px;
+ height:100%;
 /* background-position: center center;
 -webkit-background-position:center center;
 */
@@ -483,7 +483,7 @@ footer {
   left: auto;
 }
 /*  a lot of displays still have it, also iPad */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media (min-device-width: 768px) and (max-device-width: 1024px) {
   header,
   nav,
   article,
@@ -517,7 +517,7 @@ footer {
 }
 /* "retina" displays (4K) */
 /* mobiles */
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+@media (min-device-width: 320px) and (max-device-width: 480px) {
   header,
   nav,
   article,
