--- a/styles/base.css
+++ b/styles/base.css
@@ -140,8 +140,9 @@ a:focus {
 /* background-position: center center;
 -webkit-background-position:center center;
 */
- background-size: cover;
--webkit-background-size:cover;
+ background-size: contain;
+-webkit-background-size:contain;
+background-repeat:none;
  opacity:0;
  transition: opacity 2.5s ease-in;
 }
