sure, kill me css4

--- a/styles/base.css
+++ b/styles/base.css
@@ -485,7 +485,7 @@ footer {
   left: auto;
 }
 /*  a lot of displays still have it, also iPad */
-@media (min-device-width: 480px) and (max-device-width: 1024px) {
+@media only all and (min-device-width: 480px) and (max-device-width: 1024px) {
   header,
   nav,
   article,
@@ -527,7 +527,7 @@ footer {
 }
 /* "retina" displays (4K) */
 /* mobiles */
-@media (min-device-width: 320px) and (max-device-width: 480px) {
+@media only all and (min-device-width: 320px) and (max-device-width: 480px) {
   header,
   nav,
   article,
@@ -547,7 +547,7 @@ footer {
 	text-align:center;
   }
   header h1 {
-    font-size: 1.4em;
+    font-size: 0.2em;
     font-weight: 300;
     padding: 0px;
     margin: 10px 0px 10px 0px;
