--- a/styles/base.css
+++ b/styles/base.css
@@ -140,9 +140,9 @@ a:focus {
 /* background-position: center center;
 -webkit-background-position:center center;
 */
- background-size: contain;
--webkit-background-size:contain;
--moz-background-size:contain;
+ background-size: cover;
+-webkit-background-size:cover;
+-moz-background-size:cover;
 background-repeat:none;
  opacity:0;
  transition: opacity 2.5s ease-in;
