--- a/styles/base.css
+++ b/styles/base.css
@@ -137,9 +137,9 @@ a:focus {
  position:fixed;	
  width:100%;
  height:100%;
-/* background-position: center center;
--webkit-background-position:center center;
-*/
+background-position: center top;
+-webkit-background-position:center top;
+-moz-background-position:center top;
  background-size: cover;
 -webkit-background-size:cover;
 -moz-background-size:cover;
