--- a/styles/base.css
+++ b/styles/base.css
@@ -40,6 +40,7 @@ header h1 {
   padding: 100px;
   text-align: center;
   color: #f8fbd4;
+  text-shadow: 0px 3px 2px rgba(0, 0, 0, 1);	
 }
 
 .hidden{ display:none; }
@@ -500,9 +501,9 @@ footer {
 
   header h1 {
     font-size: 1.4em;
-    font-weight: 300;
+    font-weight: 600;
     padding: 0px;
-    margin: 20px 0px 20px 0px;
+    margin: 10px 0px 10px 0px;
   }
 
   .flip-container {
@@ -548,8 +549,8 @@ footer {
 	text-align:center;
   }
   header h1 {
-    font-size: 1em;
-    font-weight: 300;
+    font-size: 1.4em;
+    font-weight: 600;
     padding: 0px;
     margin: 10px 0px 10px 0px;
   }
