--- a/styles/base.css
+++ b/styles/base.css
@@ -40,7 +40,11 @@ header h1 {
   padding: 100px;
   text-align: center;
   color: #f8fbd4;
-  text-shadow: 0px 3px 2px rgba(0, 0, 0, 1);	
+  text-shadow: 0px 3px 0px rgb(41, 41, 41);
+  -webkit-text-shadow: 0px 3px 0px rgb(41, 41, 41);
+  -moz-text-shadow: 0px 3px 0px rgb(41, 41, 41);
+
+	
 }
 
 .hidden{ display:none; }
