--- a/styles/base.css
+++ b/styles/base.css
@@ -2,7 +2,7 @@
 /* Fonts **********************************************************************/
 /* Site Wide Settings ********************************************************** */
 body {
-  font-family: "Open Sans", Palatino, Times New Roman, serif;
+  font-family: "Raleway", Palatino, Times New Roman, serif;
   line-height: 1.2em;
   font-weight: 300;
   color: #373b44;
@@ -86,7 +86,7 @@ p.center {
 }
 footer p {
   font-size: 0.8em;
-  line-height: 0.8em;
+  line-height: 1.2em;
   font-weight: 300;
   padding: 3em;
   color: #f6f6f6;
@@ -451,8 +451,7 @@ background-repeat:none;
 /* Footer ************************************************************************** */
 footer {
   width: 100%;
-  height: 80px;
-  /* background: rgba(255, 255, 255, 0.2); */
+  height: auto;
   display: block;
   clear: both;
   position: relative;
