--- a/styles/base.css
+++ b/styles/base.css
@@ -562,8 +562,10 @@ footer {
   #social img{
 	padding:10px;
   }
-#sketchbook-wrapper{
+  #sketchbook-wrapper{
   max-width: 480px;
+
+.tile img{margin:4px;}
 }
 }
 @media only all and (min-width: 240px) and (max-width: 480px) {
