--- a/styles/base.css
+++ b/styles/base.css
@@ -19,7 +19,7 @@ header, nav, article, #social, #sketchbook-wrapper {
   display: block;
 }
 
-h1,h2 {
+h1,h2,h3 {
   font-family: "Raleway";
   font-weight: 300;
   font-size: 2.4em;
@@ -28,6 +28,7 @@ h1,h2 {
   color: #373b44;
   text-shadow: 0px 3px 0px #cccccc;
 }
+h3 {font-size:1.2em;}
 
 img {  
   border: 0; 
@@ -66,7 +67,7 @@ p,ul {
   font-size: 1.2em;
   line-height: 1.4em;
   font-weight: 300;
-  padding: 0.4em;
+  padding: 0.4em 1.2em;
   color: #373b44;
 }
 
@@ -109,19 +110,6 @@ footer a:hover, footer a:focus{
  transition: opacity 0.4s ease-in-out;
 }
 
-/*
-#bg {
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background: #373b44 url("../images/noise.png");
-  z-index: -1;
-}
-*/
 #slideshow {
   position: fixed;
   top: 0px;
@@ -350,10 +338,11 @@ width:auto;
   width: 100%;
  /* height: 0%;*/
   opacity: 0;
-  z-index: 1000;
-  background: rgba(0,0,0,0.95);
+  z-index: -1000;
+  background: rgba(0,0,0,0.0);
 }
 .showDarkbox {
+z-index:1000;
   display: block;
   height: 100%;
 	top:0;
@@ -368,7 +357,7 @@ width:auto;
   opacity: 1;
 }
 .hideDarkbox {
-
+z-index:1000;
   -webkit-animation: slide-out 0.8s ease-in;
   /* Safari 4+ */
   -moz-animation: slide-out 0.8s ease-in;
@@ -399,13 +388,16 @@ width:auto;
 }
 .container-wrapper, .navigation-wrapper {
   position:absolute;
-  width: 100%;
-  height: 100%;
+  width: 96%;
+  height: 96%;
   display: table;
-  margin: 0px auto;
+  margin: 2%;
   border: 0px solid #fff;
   border-radius: 0px;
 }
+.container-wrapper{
+  background: rgba(0,0,0,0.95);
+  }
 
 
 .previous {
@@ -483,7 +475,12 @@ footer {
 }
 /*  a lot of displays still have it, also iPad */
 @media only all and (min-width: 768px) and (max-width: 1024px) {
-  header,
+.columned{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+  } 
+
+ header,
   nav,
   article,
   .morePosts,
@@ -509,13 +506,15 @@ footer {
   }
 #sketchbook-wrapper{
   max-width: 720px;
+
+
 }
 
 }
 /* "retina" displays (4K) */
 /* mobiles */
 @media only all and (min-width: 240px) and (max-width: 768px) {
-
+p,ul{  padding: 0.4em 2em; }
   header,
   nav,
   article,
@@ -527,7 +526,7 @@ footer {
   }
 
   h1,
-  h2 {
+  h2,h3 {
     font-size: 1.4em;
     line-height: 1.4em;
     padding: 0px;
@@ -547,7 +546,7 @@ footer {
     margin: 4px 16px;
   }
 
-  article section {
+.columned{
     -webkit-column-count: 1;
     -moz-column-count: 1;
   }
@@ -565,11 +564,17 @@ footer {
   #sketchbook-wrapper{
   max-width: 480px;
 
-.tile img{margin:4px;}
 }
 }
 @media only all and (min-width: 240px) and (max-width: 480px) {
+p,ul{  padding: 0.4em 2em; }
+.tilespot,.spot,.tile{ width:200px;height:200px; }
+.tile img { margin:10px;}
+.columned{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+  }
 #sketchbook-wrapper{
-  max-width: 240px;
+  max-width: 400px;
 }
 }
